--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start:dev": "webpack serve"
+    "start:dev": "webpack serve",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +14,12 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
     "react-dom": "^17.0.1",
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1",
